[workspace]
members = [".", "genbinding"]

[package]
name = "bad64-sys"
version = "0.3.0"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2018"
description = "Rust bindings for Binja's arm64 disassembler"
license = "Apache-2.0"
repository = "https://github.com/yrp604/bad64-sys"
categories = ["external-ffi-bindings"]

include = [
	"/README.md",
	"/LICENSE",
	"/src",
	
	"/aarch-arm64",
	"!/aarch-arm64/disassembler/test*",

	# Make sure to include the generated binding and exclude the generation tool
	"binding/bindings.rs",
	"!/genbinding",
]

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
glob = "0.3"
